add Teacher service

--- a/views/vwTeacher/editProfile.hbs
+++ b/views/vwTeacher/editProfile.hbs
@@ -149,8 +149,8 @@
                                     <div class="col d-flex flex-column flex-sm-row justify-content-between mb-3">
                                         <div class="text-center text-sm-left mb-2 mb-sm-0">
                                             <h4 class="pt-sm-2 pb-1 mb-0 text-nowrap" style="text-shadow:2px 2px black; color: white">{{this.teacher.teacherName}}</h4>
-                                            <p class="mb-0" style="text-shadow:2px 2px black; color: white">@khangnhat</p>
-                                            <div class="text-muted" style="text-shadow:2px 2px black; color: gray"><small>Last seen 2 hours ago</small></div>
+                                            <p class="mb-0" style=" color: white">@khangnhat</p>
+                                            <div class="text-muted" style="color: gray"><small>Last seen 2 hours ago</small></div>
                                             <form
             action="/teacher/profile/edit"
             method="post"
