--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -29,6 +29,9 @@
                 <li class="list-inline-item p-2 pr-0 text-center">
                     <h5 class="font-weight-bold mb-0">{{this.teacher.reviews}}</h5><small class="text-muted"> <i class="fa fa-star mr-1" style="color: yellowgreen">Reviews</i></small>
                 </li>
+                 <li class="list-inline-item p-2 pr-0 text-center">
+                    <h5 class="font-weight-bold mb-0">{{this.teacher.rating}}</h5><small class="text-muted"> <i class="fa fa-star mr-1" style="color: yellow">Rating</i></small>
+                </li>
             </div>
         </div>
         <div class="px-4 py-3">
