fix teacher service

--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -19,7 +19,7 @@
             <div class="col-md-2 ml-0 pl-0">
                 <a href="/teacher/profile/edit?id={{this.teacher.teacherID}}" class="shadow-sm btn btn-outline-primary btn-lg btn-block"><i class="fa fa-edit">  Edit profile</i></a>
             </div>
-            <div class="list-inline mb-0 col-md-3 m-0 p-0" style="color: black;">
+            <div class="list-inline mb-0 col-md-4 m-0 p-0" style="color: black;">
                 <li class="list-inline-item p-2 text-center">
                     <h5 class="font-weight-bold mb-0">{{this.teacher.numCourses}}</h5><small class="text-muted"> <i class="fa fa-book mr-1"></i>Courses</small>
                 </li>
@@ -27,10 +27,10 @@
                     <h5 class="font-weight-bold mb-0">{{this.teacher.totals_stu}}</h5><small class="text-muted"> <i class="fa fa-heart mr-1" style="color: red"></i>Students</small>
                 </li>
                 <li class="list-inline-item p-2 pr-0 text-center">
-                    <h5 class="font-weight-bold mb-0">{{this.teacher.reviews}}</h5><small class="text-muted"> <i class="fa fa-star mr-1" style="color: yellowgreen">Reviews</i></small>
+                    <h5 class="font-weight-bold mb-0">{{this.teacher.reviews}}</h5><small class="text-muted"> <i class="fa fa-flag" aria-hidden="true"style="color: yellowgreen"> Reviews</i></small>
                 </li>
                  <li class="list-inline-item p-2 pr-0 text-center">
-                    <h5 class="font-weight-bold mb-0">{{this.teacher.rating}}</h5><small class="text-muted"> <i class="fa fa-star mr-1" style="color: yellow">Rating</i></small>
+                    <h5 class="font-weight-bold mb-0">{{this.teacher.rating}}</h5><small class="text-muted"> <i class="fa fa-star mr-1" style="color: #fbe375">Rating</i></small>
                 </li>
             </div>
         </div>
