+ add 500.hbs + add 400.hbs

--- a/views/500.hbs
+++ b/views/500.hbs
@@ -1,1 +1,16 @@
-<h2>500 ERRoR</h2>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="/css/err.css">
+</head>
+<body>
+<div class="container">
+    <h2>Oh no! Internal Server error.</h2>
+    <h1>500</h1>
+    <p>We can't find the page you're looking for.</p>
+    <a href="/">Go back home</a>
+</div>
+</body>
+</html>
