--- a/views/vwAdmin/index.hbs
+++ b/views/vwAdmin/index.hbs
@@ -4,7 +4,7 @@
             <div class="card-body">
                 <h5 class="card-title">Manage app</h5>
                 <p class="card-text">Control, manage fields, categories, courses, lectures.</p>
-                <a href="/fields" class="btn btn-primary">Checkout</a>
+                <a href="/admin/fields" class="btn btn-primary">Checkout</a>
             </div>
         </div>
     </div>
@@ -13,7 +13,7 @@
             <div class="card-body">
                 <h5 class="card-title">Manage users</h5>
                 <p class="card-text">Manage users, teacher</p>
-                <a href="#" class="btn btn-primary">Checkout</a>
+                <a href="/admin/users" class="btn btn-primary">Checkout</a>
             </div>
         </div>
     </div>
