--- a/views/vwAdmin/vwCategory/add.hbs
+++ b/views/vwAdmin/vwCategory/add.hbs
@@ -12,11 +12,11 @@
             </div>
         </div>
         <div class="card-footer text-muted">
-            <a class="btn btn-outline-success" href="/categories/view/{{fieldID}}" role="button">
+            <a class="btn btn-outline-success" href="/admin/categories/view/{{fieldID}}" role="button">
                 <i class="fa fa-backward" aria-hidden="true"></i>
                 List
             </a>
-            <button type="submit" class="btn btn-primary" formaction="/categories/add">
+            <button type="submit" class="btn btn-primary" formaction="/admin/categories/add">
                 <i class="fa fa-check" aria-hidden="true"></i>
                 Save
             </button>
