--- a/views/vwAdmin/vwCategory/edit.hbs
+++ b/views/vwAdmin/vwCategory/edit.hbs
@@ -14,23 +14,23 @@
       </div>
     </div>
     <div class="card-footer text-muted">
-      <a class="btn btn-outline-success" href="/categories/view/{{this.category.fieldID}}" role="button">
+      <a class="btn btn-outline-success" href="/admin/categories/view/{{this.category.fieldID}}" role="button">
         <i class="fa fa-backward" aria-hidden="true"></i>
         List
       </a>
-        <button type="submit" class="btn btn-danger" formaction="/categories/hide">
+        <button type="submit" class="btn btn-danger" formaction="/admin/categories/hide">
             <i class="fa fa-eye-slash" aria-hidden="true"></i>
             Hide
         </button>
-        <button type="submit" class="btn btn-danger" formaction="/categories/unhide">
+        <button type="submit" class="btn btn-danger" formaction="/admin/categories/unhide">
             <i class="fa fa-eye" aria-hidden="true"></i>
             Unhide
         </button>
-      <button type="submit" class="btn btn-danger" formaction="/categories/del">
+      <button type="submit" class="btn btn-danger" formaction="/admin/categories/del">
         <i class="fa fa-trash" aria-hidden="true"></i>
         Delete
       </button>
-      <button type="submit" class="btn btn-primary" formaction="/categories/edit">
+      <button type="submit" class="btn btn-primary" formaction="/admin/categories/edit">
         <i class="fa fa-check" aria-hidden="true"></i>
         Save
       </button>
