--- a/views/vwAdmin/vwField/add.hbs
+++ b/views/vwAdmin/vwField/add.hbs
@@ -10,11 +10,11 @@
             </div>
         </div>
         <div class="card-footer text-muted">
-            <a class="btn btn-outline-success" href="/fields" role="button">
+            <a class="btn btn-outline-success" href="/admin/fields" role="button">
                 <i class="fa fa-backward" aria-hidden="true"></i>
                 List
             </a>
-            <button type="submit" class="btn btn-primary" formaction="/fields/add">
+            <button type="submit" class="btn btn-primary" formaction="/admin/fields/add">
                 <i class="fa fa-check" aria-hidden="true"></i>
                 Save
             </button>
