--- a/views/vwAdmin/vwField/edit.hbs
+++ b/views/vwAdmin/vwField/edit.hbs
@@ -14,23 +14,23 @@
       </div>
     </div>
     <div class="card-footer text-muted">
-      <a class="btn btn-outline-success" href="/fields" role="button">
+      <a class="btn btn-outline-success" href="/admin/fields" role="button">
         <i class="fa fa-backward" aria-hidden="true"></i>
         List
       </a>
-        <button type="submit" class="btn btn-danger" formaction="/fields/hide">
+        <button type="submit" class="btn btn-danger" formaction="/admin/fields/hide">
             <i class="fa fa-eye-slash" aria-hidden="true"></i>
             Hide
         </button>
-        <button type="submit" class="btn btn-danger" formaction="/fields/unhide">
+        <button type="submit" class="btn btn-danger" formaction="/admin/fields/unhide">
             <i class="fa fa-eye" aria-hidden="true"></i>
             Unhide
         </button>
-      <button type="submit" class="btn btn-danger" formaction="/fields/del">
+      <button type="submit" class="btn btn-danger" formaction="/admin/fields/del">
         <i class="fa fa-trash" aria-hidden="true"></i>
         Delete
       </button>
-      <button type="submit" class="btn btn-primary" formaction="/fields/edit">
+      <button type="submit" class="btn btn-primary" formaction="/admin/fields/edit">
         <i class="fa fa-check" aria-hidden="true"></i>
         Save
       </button>
