--- a/views/vwAdmin/vwCourse/edit.hbs
+++ b/views/vwAdmin/vwCourse/edit.hbs
@@ -14,23 +14,23 @@
       </div>
     </div>
     <div class="card-footer text-muted">
-      <a class="btn btn-outline-success" href="/courses/view/{{this.course.catID}}" role="button">
+      <a class="btn btn-outline-success" href="/admin/courses/view/{{this.course.catID}}" role="button">
         <i class="fa fa-backward" aria-hidden="true"></i>
         List
       </a>
-        <button type="submit" class="btn btn-danger" formaction="/courses/hide">
+        <button type="submit" class="btn btn-danger" formaction="/admin/courses/hide">
             <i class="fa fa-eye-slash" aria-hidden="true"></i>
             Hide
         </button>
-        <button type="submit" class="btn btn-danger" formaction="/courses/unhide">
+        <button type="submit" class="btn btn-danger" formaction="/admin/courses/unhide">
             <i class="fa fa-eye" aria-hidden="true"></i>
             Unhide
         </button>
-      <button type="submit" class="btn btn-danger" formaction="/courses/del">
+      <button type="submit" class="btn btn-danger" formaction="/admin/courses/del">
         <i class="fa fa-trash" aria-hidden="true"></i>
         Delete
       </button>
-      <button type="submit" class="btn btn-primary" formaction="/courses/edit">
+      <button type="submit" class="btn btn-primary" formaction="/admin/courses/edit">
         <i class="fa fa-check" aria-hidden="true"></i>
         Save
       </button>
