--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,4 @@
-<div class="w-100 p-2" style="width: 100%">
+<div class="w-100" style="width: 100%">
 
     <div class="row">
         <div class="col-12 bg-transparent gradient-home">
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col-12">
-            <div class="mt-3 ml-3 mr-3 mb-4">
+            <div class="mt-3 ml-3 mr-3 mb-5">
                 <h4 class="bg-light">Khóa học nổi bật</h4>
                 <div id="cardslider1" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
@@ -190,7 +190,7 @@
                 </div>
             </div>
 
-            <div class="mt-3 ml-3 mr-3 mb-4">
+            <div class="mt-3 ml-3 mr-3 mb-5">
                 <h4 class="bg-light">Khóa học được xem nhiều nhất</h4>
                 <div id="cardslider2" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
@@ -364,7 +364,7 @@
                 </div>
             </div>
 
-            <div class="mt-3 ml-3 mr-3 mb-4">
+            <div class="mt-3 ml-3 mr-3 mb-5">
                 <h4 class="bg-light">Khóa học mới nhất</h4>
                 <div id="cardslider3" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
@@ -538,7 +538,7 @@
                 </div>
             </div>
 
-            <div class="mt-3 ml-3 mr-3 mb-4">
+            <div class="mt-3 ml-3 mr-3 mb-5">
                 <h4 class="bg-light">Lĩnh vực hot nhất</h4>
                 <div id="cardslider4" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
