--- a/views/layouts/main1.hbs
+++ b/views/layouts/main1.hbs
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light ">
     <a class="navbar-brand" href="#">
       5Horses
     </a>
