--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -3,7 +3,7 @@
 
         var offset = 4;
         var courseID = {{lecture.courseID}};
-        var totalFb = {{totalFb}};
+        let totalFb = {{totalFb}} + 0;
 
         if (offset >= totalFb) {
             $("#show-more").addClass("disabled");
@@ -89,23 +89,12 @@
         starRating();
 
 
-        //         $('#userRating').on('click', function () {
-        //             $("#userRating").rate();
-        //
-        // //or for example
-        //             var options = {
-        //                 max_value: 6,
-        //                 step_size: 0.5,
-        //             }
-        //             $(".rating").rate(options);
-        //         })
-
         let popup = document.getElementById("popup");
 
-        $('#popupBtn').on('click', function () {
-            popup.classList.add('open-popup');
-
-        });
+        // $('#popupBtn').on('click', function () {
+        //     popup.classList.add('open-popup');
+        //
+        // });
 
 
         function openPopup() {
@@ -224,7 +213,7 @@
         <!--            <div class="btn-lg"> lecture 3</div>-->
         <!--        </div>-->
         <div class="col-md-12">
-            <div class="container">
+            <div class="container-fluid">
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active font-weight-bold" role="tab" href="#courseContent" data-toggle="tab">
@@ -261,7 +250,7 @@
                         {{this.lecture.description}}
                     </div>
                     <div role="tabpanel" id="review" class="tab-pane">
-                        <button class="give-feedback btn-block mt-3 mb-3" type="button" onclick="openPopup()">
+                        <button class="give-feedback btn-block mt-3 mb-3 float-right w-25" type="button" onclick="openPopup()">
                             Give feedback
                         </button>
                         <form action="/user-courses/user-feedback" method="post">
@@ -281,7 +270,7 @@
                                         <label for="rate-1" class="fa fa-star"></label>
                                         <!--                                    <form action="/user-courses/user-feedback" method="get">-->
                                         <header class="headerUserRating"></header>
-                                        <div id="ratingReview" name="RatingStar"></div>
+<!--                                        <div id="ratingReview" name="RatingStar"></div>-->
                                         <div class="textarea" style="height: 100px;width: 100%;overflow: hidden">
                                             <textarea autofocus name="review" cols="30" style="height: 100%;width: 100%;outline: none;
                                                 border: 1px solid #333; padding: 10px;font-size: 17px; resize: none; border-radius: 5px;
