profile hbs fix

--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -27,10 +27,10 @@
                     <h5 class="font-weight-bold mb-0">{{this.teacher.totals_stu}}</h5><small class="text-muted"> <i class="fa fa-heart mr-1" style="color: red"></i>Students</small>
                 </li>
                 <li class="list-inline-item p-2 pr-0 text-center">
-                    <h5 class="font-weight-bold mb-0">{{this.teacher.reviews}}</h5><small class="text-muted"> <i class="fa fa-flag" aria-hidden="true"style="color: yellowgreen"> Reviews</i></small>
+                    <h5 class="font-weight-bold mb-0">{{this.teacher.reviews}}</h5><small class="text-muted"> <i class="fa fa-flag" aria-hidden="true"style="color: yellowgreen"></i> Reviews</small>
                 </li>
                  <li class="list-inline-item p-2 pr-0 text-center">
-                    <h5 class="font-weight-bold mb-0">{{this.teacher.rating}}</h5><small class="text-muted"> <i class="fa fa-star mr-1" style="color: #fbe375">Rating</i></small>
+                    <h5 class="font-weight-bold mb-0">{{this.teacher.rating}}</h5><small class="text-muted"> <i class="fa fa-star mr-1" style="color: #fbe375"></i>Rating</small>
                 </li>
             </div>
     
