--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -72,6 +72,10 @@
                                                         <span class="text-success">Updating <i class="fa fa-book" aria-hidden="true"></i></span>
                                                         {{/if}}
                                                         </div>
+                                                        <div style="display: flex; justify-content:space-between">
+                                                            <div></div>
+                                                            <small class="text-dark">last modified {{update}}</small>
+                                                        </div>
                                                         <small>
                                                         {{{description}}}
                                                         </small>
