--- a/views/vwAccount/login.hbs
+++ b/views/vwAccount/login.hbs
@@ -105,7 +105,7 @@
             class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
         <!-- Copyright -->
         <div class="text-white mb-3 mb-md-0">
-            5Horses 2022. All rights reserved
+            5Horses Online Academy 2022. All rights reserved
         </div>
         <!-- Copyright -->
 
