+ custom courses.hbs + update lecture.hbs + add more style to styles.css

--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -250,7 +250,7 @@
                         {{this.lecture.description}}
                     </div>
                     <div role="tabpanel" id="review" class="tab-pane">
-                        <button class="give-feedback btn-block mt-3 mb-3 float-right w-25" type="button" onclick="openPopup()">
+                        <button class="give-feedback btn-block mt-3 mb-3 float-right" style="width: 15%" type="button" onclick="openPopup()">
                             Give feedback
                         </button>
                         <form action="/user-courses/user-feedback" method="post">
