--- a/views/vwUser/courses.hbs
+++ b/views/vwUser/courses.hbs
@@ -1,70 +1,79 @@
+<div class="card ">
+    <p class="card-header d-flex aPath gradient-home">
+        <a class="aPath" href="javascript:;">{{fieldName}}</a>
+        <span>&nbsp;&nbsp;❯&nbsp;&nbsp;</span>
+        <a class="aPath" href="javascript:;">{{catName}}</a>
+    </p>
 
-
-<div class="card">
-  <p class="card-header d-flex aPath">
-    <a class="aPath" href="javascript:;">{{fieldName}}</a>
-    <span>&nbsp;&nbsp;❯&nbsp;&nbsp;</span>
-    <a class="aPath" href="javascript:;">{{catName}}</a>
-  </p>
-
-  <div class="card-body">
-    {{#if this.empty}}
-    <div class="m-5"
-      <p class="card-title">No data</p>
-      <p class="card-text">Please return next time.</p>
-    </div>
-    {{else}}
-        <div class="row">
-        {{#each this.course}}
-          <div class="col-sm-3 mb-3" type="button">
-            <a class="course-card-a" href="/user-courses/detail?catID={{catID}}&id={{courseID}}">
-            <div class="course-card">
-                <img class= "course-card-img" src="https://drive.google.com/uc?export=view&id={{image}}" alt="">
-                
-                <h5 class="course-card-title">{{courseName}}</h5>
-                <p class="course-card-instructor">{{instructor}}</p>
-                <span class="rating">{{rating}}</span>
-                {{#each star}}
-                  <span class="fa {{#if starHalf}}fa-star-half-o star-checked{{/if}} {{#if star}}fa-star star-checked{{else}}fa-star-o star-checked{{/if}}"></span>
-                {{/each}}
-                <span>&nbsp;({{format_number rating_num}})</span><br>
-                {{#if hasPromotion}}
-                  <span class="price">₫{{format_number promotion}}</span><br>
-                  <span class="old-price">₫{{format_number price}}</span>
-                {{else}}
-                  <span class="price">₫{{format_number price}}</span>
-                {{/if}}
-                <br>
-                <p class="mt-1">
-                {{#if isBestseller}}
-                  <span class="bestseller">Bestseller</span>
-                {{/if}}
-                {{#if isNew}}
-                  <span class="new">New</span>
-                {{/if}}
-                </p>
+    <div class="card-body">
+        {{#if this.empty}}
+            <div class="m-5">
+                <p class="card-title">No data</p>
+                <p class="card-text">Please return next time.</p>
             </div>
-            </a>
-          </div>
-        {{/each}}
-        </div>
-        <nav aria-label="Page navigation example">
-          <ul class="pagination justify-content-end">
-            <li class="page-item {{#unless hasPrevPage}}disabled{{/unless}}">
-              <a class="page-link" href="?page={{this.prevPage}}">Previous</a>
-            </li>
-          {{#each this.pageNumbers}}
-            <li class="page-item  {{#if isCurrent}}active{{/if}}">
-              <a class="page-link" href="{{#if isCurrent}}javascript:;{{else}}?page={{value}}{{/if}}">
-                {{value}}
-              </a>
-            </li>
-          {{/each}}
-            <li class="page-item {{#unless hasNextPage}}disabled{{/unless}}">
-              <a class="page-link" href="?page={{this.nextPage}}">Next</a>
-            </li>
-          </ul>
-        </nav>
-  {{/if}}
-  </div>
+        {{else}}
+            <ul class="list-group list-group-flush justify-content-center">
+                {{#each this.course}}
+                    <li class="list-group-item">
+                        <a class="course-card-a " href="/user-courses/detail?catID={{catID}}&id={{courseID}}">
+                            <div class="media">
+                                <img width="260" height="145" class="mr-3"
+                                     src="https://drive.google.com/uc?export=view&id={{image}}">
+
+
+                                <div class="media-body">
+                                    <h3 class="course-card-title">{{courseName}}</h3>
+                                    <p class="course-card-instructor">{{instructor}}</p>
+                                    <span class="rating">{{rating}}</span>
+                                    {{#each star}}
+                                        <span class="fa {{#if starHalf}}fa-star-half-o star-checked{{/if}} {{#if
+                                                star}}fa-star star-checked{{else}}fa-star-o star-checked{{/if}}">
+
+                                        </span>
+                                    {{/each}}
+                                    <span>&nbsp;({{format_number rating_num}})</span><br>
+                                    {{#if hasPromotion}}
+                                        <span class="price">₫{{format_number promotion}}</span><br>
+                                        <span class="old-price">₫{{format_number price}}</span>
+                                    {{else}}
+                                        <span class="price">₫{{format_number price}}</span>
+                                    {{/if}}
+                                    <br>
+                                    <p class="mt-1">
+                                        {{#if isBestseller}}
+                                            <span class="bestseller">Bestseller</span>
+                                        {{/if}}
+                                        {{#if isNew}}
+                                            <span class="new">New</span>
+                                        {{/if}}
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                {{/each}}
+            </ul>
+
+
+            <div class="d-flex justify-content-center">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-end">
+                        <li class="page-item {{#unless hasPrevPage}}disabled{{/unless}}">
+                            <a class="page-link" href="?page={{this.prevPage}}">Previous</a>
+                        </li>
+                        {{#each this.pageNumbers}}
+                            <li class="page-item  {{#if isCurrent}}active{{/if}}">
+                            <a class="page-link" href="{{#if isCurrent}}javascript:;{{else}}?page={{value}}{{/if}}">
+                                {{value}}
+                                </a>
+                            </li>
+                        {{/each}}
+                        <li class="page-item {{#unless hasNextPage}}disabled{{/unless}}">
+                            <a class="page-link" href="?page={{this.nextPage}}">Next</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        {{/if}}
+    </div>
 </div>
