Main page, all user navigations

--- a/views/vwAccount/profile.hbs
+++ b/views/vwAccount/profile.hbs
@@ -3,9 +3,10 @@
         Profile
     </h4>
     <div class="card-body">
-        <p class="card-text">Email: {{authUser.email}}</p>
-        <p class="card-text">Name: {{authUser.name}}</p>
-        <p class="card-text">Role: {{authUser.role}}</p>
+        <p class="card-text">Email: {{user.email}}</p>
+        <p class="card-text">Name: {{user.name}}</p>
+        <p class="card-text">Role: {{user.role}}</p>
+        <p class="card-text">Introduction: {{user.introduction}}</p>
     </div>
     <div class="card-footer text-muted">
         Learn more and more
